--- a/style.css
+++ b/style.css
@@ -51,21 +51,20 @@ body {
   width: 100%;
   height: 100%;
   font-size: 20px;
-  color: rgb(115, 115, 115);
+  color: rgb(136, 136, 136);
   padding: 20px 50px;
-  font-weight: bold;
+  font-size: 25px;
 }
 /* apply hover */
 .right-side li a:hover,
 .left-side li a:hover {
   background-color: rgb(187, 187, 187);
 }
-.flexbox-container {
+.flexbox-container{
   margin-top: 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-content: flex-start;
   align-items: center;
   transition: all 0.5s;
 }
@@ -74,8 +73,9 @@ body {
   height: 800px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-content: center;
+  margin-bottom: 100px;
 }
 .contact {
   display: flex;
@@ -89,10 +89,15 @@ body {
   color: rgb(219, 17, 17);
   transition: all 0.5s;
 }
+.contact h3{
+  padding: 0;
+  margin: 0;
+}
 .contact:hover {
   transform: scale(1.2);
 }
 .flexboxy-container {
+  margin: auto;
   margin-top: 100px;
   display: flex;
   flex-wrap: wrap;
@@ -111,9 +116,11 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   position: relative;
   transition: all 0.8s;
+}
+.flexbox-item.flexbox-item-1 {
+  padding-inline-start: 20px;
 }
 
 @media only screen and (max-width: 1400px) {
@@ -161,6 +168,10 @@ body {
     flex-direction: column;
     justify-self: center;
   }
+  .about-me-text {
+    flex-direction: column;
+    align-items: center;
+  }
   .right-side,
   .left-side {
     width: 100%;
@@ -184,12 +195,6 @@ body {
   }
   .flexbox-item.flexbox-item-2 {
     margin-block: 20px;
-    height: 500px;
-    display: flex;
-    justify-content: flex-start;
-  }
-  .flexbox-container {
-    margin: 0;
   }
   .centerofleft {
     margin: auto;
@@ -198,12 +203,40 @@ body {
   h1 {
     height: 100%;
   }
-  .about-me {
-    height: 500px;
-    overflow: hidden;
-  }
 }
 
+
+
+
+
+
+
+
+
+.about-me-text {
+  display: flex;
+  padding: 10px;
+}
+.develop{
+  display: flex;
+  padding: 20px;
+}
+.develop.image{
+  display: flex;
+  flex-direction: column;
+}
+.develop.text{
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+}
+.slika{
+  width: 400px;
+  height: 400px;
+  background-image: url("./developerko.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 .flexboxy-container {
   margin: auto;
   transition: all 0.5s;
@@ -291,5 +324,35 @@ body {
   transition: all 0.5s;
 }
 .ul-item:hover {
+  transform: scale(1.2);
+}
+#contact img{
+  display: block;
+  width: 100px;
+}
+.contact-me{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.contact-item{
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2%;
+  margin-bottom: 80px;
+  transition: all 0.5s;
+  
+}
+.contact-item img, .contact-item a, .contact-item span{
+  display: block;
+  width: 300px;
+  text-align: center;
+  font-size: 20px;
+  text-decoration-line: none;
+  color: rgb(156, 156, 156);
+}
+.contact-item:hover{
   transform: scale(1.2);
 }
